{{$NEXT}}

0.37     2015-08-15

- Include MojibakeTests plugin.


0.36     2015-07-12

- Don't include Test::Pod::LinkCheck and Test::Pod::No404s when running under Travis.


0.35     2015-07-05

- Make it possible to use GitHub issues instead of rt.cpan.org.


0.34     2015-05-14

- Always set xt_mode to true for Test::Compile.


0.33     2015-03-10

- Set --iterations=2 in generated perltidyrc.


0.32     2015-02-08

- Set --blank-lines-before-packages=0 in generated perltidyrc.


0.31     2015-01-15

- Perl::Critic and Perl::Tidy need to be the develop requires list for modules
  using this bundle, not in the prereqs of the bundle itself.


0.30     2015-01-13

- Make sure that Perl::Critic and Perl::Tidy end up in the prereqs for the
  benefit of the tidyall test.


0.29     2015-01-11

- Made the plugin bundle commit and push the post-release version bump.


0.28     2015-01-11

- Replaced PkgVersion with BumpVersionAfterRelease and added
  CheckVersionIncrement and Test::Version for good measure.

- Added Test::TidyAll and a plugin to generate default tidyall.ini,
  perltidyrc, and perlcriticrc files for my distros.


0.27     2014-12-20

- Replace GatherDir and PruneCruft with Git::GatherDir.


0.26     2014-11-15

- The generated Makefile.PL or Build.PL file is now copied into the repo and
  checked in for each release.


0.25     2014-11-09

- This bundle now consumes the Dist::Zilla::Role::PluginBundle::Config::Slicer
  role to allow for arbitrary plugin configuration.


0.24     2014-11-04

- Make sure that a copyright_holder in dist.ini overrides the default of
  "David Rolsky".


0.23     2014-11-02

- Oops, accidentally removed the CopyFilesFromBuild plugin from the prereq
  list in the last release.


0.22     2014-11-02

- The DROLSKY::Contributors plugin now leaves existing .mailmap and weaver.ini
  files alone.

- Exclude plugins shipped with this bundle when checking for stale modules.
